update pits
